<resources>
<!--    <string name="app_name">Android Labs</string>-->
    <string name="hello_world">Hello World</string>
    <string name="button_text">I\’m a button!</string>
    <string name="android">I love Android</string>
    <string name="switch_on_off">Switch on/off</string>
    <string name="press_me">PRESS ME</string>
    <string name="check_this_out">Check this out!</string>
    <string name="toast_message">Label has been updated.</string>
    <string name="checkBox_state">The checkbox is now</string>
    <string name="on">on</string>
    <string name="off">off</string>
    <string name="welcome">Welcome!</string>
    <string name="don_t_call_me_that">DON\'T CALL ME THAT</string>
    <string name="thank_you">THANK YOU</string>
    <string name="enter_your_name">Enter your name</string>
    <string name="next">Next</string>

    <string name="app_name">Todo App</string>
    <string name="hint_type_here">Type Here..</string>
    <string name="urgent">Urgent</string>
    <string name="btn_add">Add</string>
    <string name="alert_dialog_title">Do you want to delete this?</string>
    <string name="alert_dialog_message">The selected row is: </string>
    <string name="alert_dialog_positive">Delete</string>
    <string name="alert_dialog_negative">Cancel</string>

</resources>