<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent_layout"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:columnCount="2"
    android:rowCount="4">


    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/android"
        android:textSize="30sp"
        android:layout_row="0"
        android:layout_column="0"/>

        <ImageButton
            android:id="@+id/image_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_row="0"
            android:layout_rowSpan="2"
            android:layout_column="1"
            android:contentDescription="@string/android"
            app:srcCompat="@drawable/flag" />

    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_column="0"
        android:minWidth="32sp"
        android:minHeight="48dp"
        android:text="@string/switch_on_off"
        android:textSize="20sp"
        tools:ignore="UseSwitchCompatOrMaterialXml" />


    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_column="0"
        android:layout_marginRight="50sp"
        android:layout_weight="1"
        android:padding="15sp"
        android:text="@string/press_me"
        android:textSize="20sp" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_row="2"
            android:layout_column="1"
            android:text="@string/check_this_out"
            android:textSize="25sp" />

        <EditText
        android:id="@+id/editText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_row="3"
        android:layout_column="0"
        android:layout_columnSpan="1"
        android:ems="10"
        android:hint="@string/android"
        android:inputType="textPersonName" />

</GridLayout>


